# magma-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
magma/: __init__.py  magma.py
notebooks/: 01_quadratic_benchmark.ipynb  02_heavy_tailed_noise.ipynb
tests/: test_magma.py
