[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "magma-optimizer"
dynamic = ["version"]
description = "Momentum-Aligned Gradient Masking — block-wise stochastic masking wrapper for PyTorch optimizers"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/andrijdavid/magma-optimizer"
Repository = "https://github.com/andrijdavid/magma-optimizer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.version]
source = "regex_commit"
path = "magma/__init__.py"
tag_sign = false

[tool.hatch.build.targets.wheel]
packages = ["magma"]
